--- a/project3/template_solution_Dipayan.ipynb
+++ b/project3/template_solution_Dipayan.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "824a840beb8b323e",
    "metadata": {
     "collapsed": false
@@ -38,13 +38,15 @@
     "import torchvision.datasets as datasets\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "from torchvision.models import resnet50, ResNet50_Weights\n",
+    "# from torchvision.models import resnet50, ResNet50_Weights\n",
+    "# from torchvision.models import convnext_small, ConvNeXt_Small_Weights\n",
+    "from torchvision.models import regnet_y_16gf, RegNet_Y_16GF_Weights\n",
     "import torch.optim as optim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "82adb41ca8c23be6",
    "metadata": {
     "collapsed": false
@@ -61,20 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6b3d5c760c9c963b",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0--1--2--3--4--5--6--7--8--9--10--11--12--13--14--15--16--17--18--19--20--21--22--23--24--25--26--27--28--29--30--31--32--33--34--35--36--37--38--39--40--41--42--43--44--45--46--47--48--49--50--51--52--53--54--55--56--57--58--59--60--61--62--63--64--65--66--67--68--69--70--71--72--73--74--75--76--77--78--79--80--81--82--83--84--85--86--87--88--89--90--91--92--93--94--95--96--97--98--99--100--101--102--103--104--105--106--107--108--109--110--111--112--113--114--115--116--117--118--119--120--121--122--123--124--125--126--127--128--129--130--131--132--133--134--135--136--137--138--139--140--141--142--143--144--145--146--147--148--149--150--151--152--153--154--155--156--"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Transform, resize and normalize the images and then use a pretrained model to extract \n",
@@ -84,7 +78,7 @@
     "# The required pre-processing depends on the pre-trained model you choose \n",
     "# below. \n",
     "# See https://pytorch.org/vision/stable/models.html#using-the-pre-trained-models\n",
-    "train_transforms = ResNet50_Weights.IMAGENET1K_V2.transforms()\n",
+    "train_transforms = RegNet_Y_16GF_Weights.IMAGENET1K_SWAG_E2E_V1.transforms()\n",
     "train_dataset = datasets.ImageFolder(root=\"dataset/\", transform=train_transforms)\n",
     "# Hint: adjust batch_size and num_workers to your PC configuration, so that you don't \n",
     "# run out of memory (VRAM if on GPU, RAM if on CPU)\n",
@@ -96,29 +90,32 @@
     "                          num_workers=10)\n",
     "# TODO: define a model for extraction of the embeddings (Hint: load a pretrained model,\n",
     "# more info here: https://pytorch.org/vision/stable/models.html)\n",
-    "model = resnet50(weights=ResNet50_Weights.IMAGENET1K_V2)\n",
-    "embedding_size = 2048 # Dummy variable, replace with the actual embedding size once you pick your model\n",
+    "model = regnet_y_16gf(weights=RegNet_Y_16GF_Weights.IMAGENET1K_SWAG_E2E_V1)\n",
+    "# print(model)\n",
+    "embedding_size = 3024 # Dummy variable, replace with the actual embedding size once you pick your model\n",
     "num_images = len(train_dataset)\n",
     "embeddings = np.zeros((num_images, embedding_size))\n",
     "# TODO: Use the model to extract the embeddings. Hint: remove the last layers of the \n",
     "# model to access the embeddings the model generates. \n",
-    "model.fc = nn.Sequential()\n",
+    "model.fc = nn.Identity()\n",
+    "# model.classifier[2] = nn.Identity()\n",
     "model.to(device)\n",
     "i = 0\n",
-    "for inputs, _ in train_loader:\n",
-    "    inputs = inputs.to(device)\n",
-    "    outputs = model(inputs)\n",
-    "    embeddings[batch*i : batch*(i+1)] = outputs.cpu().detach().numpy()\n",
-    "    del inputs\n",
-    "    del outputs\n",
-    "    print(i, end=\"--\")\n",
-    "    i += 1\n",
+    "with torch.no_grad():\n",
+    "    for inputs, _ in train_loader:\n",
+    "        inputs = inputs.to(device)\n",
+    "        outputs = model(inputs)\n",
+    "        embeddings[batch*i : batch*(i+1)] = outputs.cpu().numpy()\n",
+    "        del inputs\n",
+    "        del outputs\n",
+    "        print(i, end=\"--\")\n",
+    "        i += 1\n",
     "np.save('dataset/embeddings.npy', embeddings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "335d91cc379d4f6b",
    "metadata": {
     "collapsed": false
@@ -168,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6daf836a4adb0abe",
    "metadata": {
     "collapsed": false
@@ -200,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "6e1b0092e0b13f88",
    "metadata": {
     "collapsed": false
@@ -221,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d5082344",
    "metadata": {},
    "outputs": [],
@@ -247,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "fcd11318eb7b9488",
    "metadata": {
     "collapsed": false
@@ -263,11 +260,11 @@
     "        The constructor of the model.\n",
     "        \"\"\"\n",
     "        super().__init__()\n",
-    "        self.fc1 = nn.Linear(6144, 512)\n",
+    "        self.fc1 = nn.Linear(3*embedding_size, 512)\n",
     "        # self.dropout1 = nn.Dropout(0.2)\n",
-    "        self.fc2 = nn.Linear(512, 1)\n",
+    "        self.fc2 = nn.Linear(512, 32)\n",
     "        # self.dropout2 = nn.Dropout(0.2)\n",
-    "        # self.fc3 = nn.Linear(64, 1)\n",
+    "        self.fc3 = nn.Linear(32, 1)\n",
     "\n",
     "    def forward(self, x):\n",
     "        \"\"\"\n",
@@ -281,82 +278,20 @@
     "        x = F.relu(x)\n",
     "        # x = self.dropout1(x)\n",
     "        x = self.fc2(x)\n",
-    "        # x = F.relu(x)\n",
+    "        x = F.relu(x)\n",
     "        # x = self.dropout2(x)\n",
-    "        # x = self.fc3(x)\n",
+    "        x = self.fc3(x)\n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "28634c90281cd699",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0, Batch id 0, training loss 0.7075895071029663\n",
-      "Epoch 0, Batch id 200, training loss 0.6446843147277832\n",
-      "Epoch 0, Batch id 400, training loss 0.5431334972381592\n",
-      "Epoch 0, Batch id 600, training loss 0.5247482061386108\n",
-      "Epoch 0, Batch id 800, training loss 0.6700018644332886\n",
-      "Epoch 0, Batch id 1000, training loss 0.4953297972679138\n",
-      "Epoch 0, Batch id 1200, training loss 0.48018878698349\n",
-      "Epoch 0, Batch id 1400, training loss 0.49854224920272827\n",
-      "Epoch 0, Batch id 1600, training loss 0.3316604495048523\n",
-      "Epoch 0, valid loss 0.40098726749420166\n",
-      "Epoch 0, accuracy: (81%)\n",
-      "Epoch 1, Batch id 0, training loss 0.22570353746414185\n",
-      "Epoch 1, Batch id 200, training loss 0.2031973898410797\n",
-      "Epoch 1, Batch id 400, training loss 0.23157468438148499\n",
-      "Epoch 1, Batch id 600, training loss 0.2320859134197235\n",
-      "Epoch 1, Batch id 800, training loss 0.20975956320762634\n",
-      "Epoch 1, Batch id 1000, training loss 0.21806827187538147\n",
-      "Epoch 1, Batch id 1200, training loss 0.13482734560966492\n",
-      "Epoch 1, Batch id 1400, training loss 0.33494484424591064\n",
-      "Epoch 1, Batch id 1600, training loss 0.13739122450351715\n",
-      "Epoch 1, valid loss 0.2869723439216614\n",
-      "Epoch 1, accuracy: (88%)\n",
-      "Epoch 2, Batch id 0, training loss 0.08922947943210602\n",
-      "Epoch 2, Batch id 200, training loss 0.058192938566207886\n",
-      "Epoch 2, Batch id 400, training loss 0.11800389736890793\n",
-      "Epoch 2, Batch id 600, training loss 0.03074335865676403\n",
-      "Epoch 2, Batch id 800, training loss 0.07768169045448303\n",
-      "Epoch 2, Batch id 1000, training loss 0.07693875581026077\n",
-      "Epoch 2, Batch id 1200, training loss 0.15564905107021332\n",
-      "Epoch 2, Batch id 1400, training loss 0.13419026136398315\n",
-      "Epoch 2, Batch id 1600, training loss 0.24686454236507416\n",
-      "Epoch 2, valid loss 0.31779026985168457\n",
-      "Epoch 2, accuracy: (90%)\n",
-      "Epoch 3, Batch id 0, training loss 0.04038844257593155\n",
-      "Epoch 3, Batch id 200, training loss 0.10486449301242828\n",
-      "Epoch 3, Batch id 400, training loss 0.03622777760028839\n",
-      "Epoch 3, Batch id 600, training loss 0.06274756789207458\n",
-      "Epoch 3, Batch id 800, training loss 0.05025128647685051\n",
-      "Epoch 3, Batch id 1000, training loss 0.01674388162791729\n",
-      "Epoch 3, Batch id 1200, training loss 0.028873031958937645\n",
-      "Epoch 3, Batch id 1400, training loss 0.026583246886730194\n",
-      "Epoch 3, Batch id 1600, training loss 0.013481772504746914\n",
-      "Epoch 3, valid loss 0.328923761844635\n",
-      "Epoch 3, accuracy: (90%)\n",
-      "Epoch 4, Batch id 0, training loss 0.016643762588500977\n",
-      "Epoch 4, Batch id 200, training loss 0.007223535794764757\n",
-      "Epoch 4, Batch id 400, training loss 0.04024898260831833\n",
-      "Epoch 4, Batch id 600, training loss 0.012736245058476925\n",
-      "Epoch 4, Batch id 800, training loss 0.011342541314661503\n",
-      "Epoch 4, Batch id 1000, training loss 0.0257707666605711\n",
-      "Epoch 4, Batch id 1200, training loss 0.009700613096356392\n",
-      "Epoch 4, Batch id 1400, training loss 0.00670743640512228\n",
-      "Epoch 4, Batch id 1600, training loss 0.06865137815475464\n",
-      "Epoch 4, valid loss 0.34795165061950684\n",
-      "Epoch 4, accuracy: (90%)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "The training procedure of the model; it accepts the training data, defines the model \n",
@@ -409,37 +344,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "5da3242f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0, Batch id 0, training loss 0.00781761109828949\n",
-      "Epoch 0, Batch id 200, training loss 0.17426347732543945\n",
-      "Epoch 0, Batch id 400, training loss 0.07370499521493912\n",
-      "Epoch 0, Batch id 600, training loss 0.1618407666683197\n",
-      "Epoch 0, Batch id 800, training loss 0.0142525564879179\n",
-      "Epoch 0, Batch id 1000, training loss 0.06842170655727386\n",
-      "Epoch 0, Batch id 1200, training loss 0.03740624710917473\n",
-      "Epoch 0, Batch id 1400, training loss 0.13102327287197113\n",
-      "Epoch 0, Batch id 1600, training loss 0.01791166514158249\n",
-      "Epoch 0, Batch id 1800, training loss 0.1249326765537262\n",
-      "Epoch 1, Batch id 0, training loss 0.01323843002319336\n",
-      "Epoch 1, Batch id 200, training loss 0.008971622213721275\n",
-      "Epoch 1, Batch id 400, training loss 0.012264356017112732\n",
-      "Epoch 1, Batch id 600, training loss 0.04364359751343727\n",
-      "Epoch 1, Batch id 800, training loss 0.014654005877673626\n",
-      "Epoch 1, Batch id 1000, training loss 0.006816229782998562\n",
-      "Epoch 1, Batch id 1200, training loss 0.017346620559692383\n",
-      "Epoch 1, Batch id 1400, training loss 0.019222646951675415\n",
-      "Epoch 1, Batch id 1600, training loss 0.02400742843747139\n",
-      "Epoch 1, Batch id 1800, training loss 0.031393058598041534\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load the training data\n",
     "X, y = get_data(TRAIN_TRIPLETS)\n",
@@ -465,20 +373,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "b2ea99b26c348253",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results saved to results.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "The testing procedure of the model; it accepts the testing data and the trained model and \n",
